# scalacpptest

./: .cache-main  .classpath  .gitignore  .project  LICENSE  README.md  pom.xml
Sample1/: CMakeLists.txt  Sample.cpp  Sample1.cpp  Sample1.h  Sample1.sln  Sample1.vcxproj  Sample1.vcxproj.filters  jnijava64.props
src/main/resources/dll/: Sample1.dylib
src/main/scala/example/: Sample1.java  Sample1.scala  example_Sample1.h  example_Sample1_delayedInit__body.h
src/main/scala/javaexample/: Sample1.java
src/main/scala/jexample/: Sample1.java
